feat: separate sport activity time
